# ChangeLog for dev-python/wmctrl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Mar 2012; James Rowe <jnrowe@gmail.com> wmctrl-0.1.ebuild:
  Switched to EAPI4.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  02 May 2011; James Rowe <jnrowe@gmail.com> wmctrl-0.1.ebuild:
  Added test to IUSE.

  04 Apr 2011; James Rowe <jnrowe@gmail.com> wmctrl-0.1.ebuild:
  Keyworded x86.

  03 Apr 2011; James Rowe <jnrowe@gmail.com> wmctrl-0.1.ebuild:
  Keyworded amd64.

  03 Mar 2011; James Rowe <jnrowe@gmail.com> wmctrl-0.1.ebuild:
  Keyworded ~x86.

*wmctrl-0.1 (02 Mar 2011)

  02 Mar 2011; James Rowe <jnrowe@gmail.com> +wmctrl-0.1.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me. Required by pdbpp.
