@@ -3,9 +3,7 @@
 # $Header: $
 
 EAPI=4
-SUPPORT_PYTHON_ABIS="1"
-PYTHON_DEPEND="2"
-RESTRICT_PYTHON_ABIS="3.*"
+PYTHON_COMPAT="python2_5 python2_6 python2_7"
 
 inherit jnrowe-pypi
 
@@ -24,5 +22,3 @@ RDEPEND="dev-python/pyrepl
 
 #  Tests need Xvfb support before they can be used
 RESTRICT="test"
-
-PYTHON_MODNAME="${PN}.py"
